--- a/intention motor representation joint action (paper 3)/conf budapest philosophy 2012-11/shared agency and motor representation.tex
+++ b/intention motor representation joint action (paper 3)/conf budapest philosophy 2012-11/shared agency and motor representation.tex
@@ -79,65 +79,75 @@ If
 \end{quote}
 then
 \begin{quote}
-	two or more agents' actions being appropriately related to a structure of social motor representation is also sufficient for shared agency.
+	two or more agents' actions being appropriately related to a structure of social motor representation is also sufficient for shared 
+	agency.
 \end{quote}
 
 
 
 
 \section{Introduction}
-Shared agency is paradigmatically involved when two (or more) people 
-	paint a house together \citep{Bratman:1992mi}, 
-	lift a heavy sofa together \citep{Velleman:1997oo}, 
-	prepare a hollandaise sauce together \citep{Searle:1990em}, 
-	go to Chicago together \citep{Kutz:2000si}, 
-	and walk together \citep{gilbert_walking_1990}.
-In developmental psychology paradigm cases involving shared agency include  two people 
-	tidying up the toys together \citep{Behne:2005qh},
-	cooperatively pulling handles in sequence to make a dog-puppet sing \citep{Brownell:2006gu},
-	bouncing a ball on a large trampoline together \citep{Tomasello:2007gl}.
+When members of a flash mob in the Central Cafe respond to a pre-arranged cue by noisily opening their newspapers, they exercise shared agency. 
+But when someone not part of the mob just happens to noisily open her newspaper in response to the same cue, her action does not involve shared agency.%
+\footnote{
+See \citet{Searle:1990em}; in his example park visitors simultaneously run to a shelter, in once case as part of dancing together and in another case because of a storm. 
+Compare \citet{Pears:1971fk} who uses contrast cases to argue that whether something is an ordinary, individual action depends on its antecedents. 
+}
+To give another example, 
+ two former members of the mob exercise shared agency when they 
+   later walk to the metro station together. 
+But two people who merely happened to be walking to the metro station side by side would not be exercising shared agency \citep{gilbert_walking_1990}. 
+These sorts of case invite the question, 
+How do actions involving shared agency differ from merely parallel actions involving  only individual agency? 
+
+The first example shows that the difference between shared agency and parallel individual agency can’t just be that the resulting actions have a common effect because merely parallel actions can have common effects too. 
+And the second example shows that the difference can’t just be a matter of coordination, because people who are merely happen to be walking side by side each other also need to coordinate their actions in order to avoid colliding.  
+Apparently, then, systematically distinguishing cases of shared agency from cases of parallel but merely individual agency  requires reflection on causes of actions.
+
+
+%
+%Shared agency is paradigmatically involved when two (or more) people 
+%	paint a house together \citep{Bratman:1992mi}, 
+%	lift a heavy sofa together \citep{Velleman:1997oo}, 
+%	prepare a hollandaise sauce together \citep{Searle:1990em}, 
+%	go to Chicago together \citep{Kutz:2000si}, 
+%	and walk together \citep{gilbert_walking_1990}.
+%In developmental psychology paradigm cases involving shared agency include  two people 
+%	tidying up the toys together \citep{Behne:2005qh},
+%	cooperatively pulling handles in sequence to make a dog-puppet sing \citep{Brownell:2006gu},
+%	bouncing a ball on a large trampoline together \citep{Tomasello:2007gl}.
 
 Which representations %and processes 
-are needed in giving a philosophical account of shared agency?
-Philosophers have so far considered intentions and other propositional attitudes but ignored the possibility that appeal to motor representation may also be needed. 
+are needed to distinguish shared from individual agency?
+Philosophers have so far considered intentions and commitments but ignored the possibility that appeal to motor representations may also be needed. 
 %To considerations jointly motivate considering whether fully characterising shared agency may require appeal to motor representation.
 By contrast, concerning individual rather than shared agency, some have argued that motor representation may play a role in explaining agency \citep[e.g.][]{pacherie:2000_content,pacherie:2008_action,butterfill:2012_intention}. 
-Scientific research provides evidence that motor representations sometimes play a role in enabling agents to exercise shared agency, as we shall explain in detail below.
+In addition, scientific research provides evidence that motor representations sometimes play a role in enabling agents to exercise shared agency, as we shall explain in detail below.
 So it is possible to ask whether appeal to motor representation  %might not only sometimes enable agents to exercise shared agency but also
-could also play a role in explaining what shared agency is.
+could also play a role in distinguishing shared from individual agency.
 In this paper we argue that it could.
-Shared agency is not only a matter of what we intend or know, or of our commitments: in some cases it also constitutively involves certain structures of motor representation, or so we aim to show.
+Shared agency is not always only a matter of our intentions or commitments: in some cases it also constitutively involves certain structures of motor representation.
+Or so we aim to show.
 
-%A \emph{joint action} is an action or event involving shared agency.
-
-Before starting on the argument, let us step back to ask why anyone might want a philosophical account of shared agency.
-Shared agency raises a tangle of scientific and philosophical questions.  Psychologically we want to know which mechanisms make it possible \citep{vesper_minimal_2010}.  
+Before going further,
+let us step back to ask 
+	why it might be useful 
+	to  distinguish systematically between shared and individual agency?
+Shared agency raises a tangle of scientific and philosophical questions.  Psychologically we want to know which mechanisms make it possible \citep{Sebanz:2006yq,vesper_minimal_2010}.  
 Developmentally we want to know when shared agency emerges, what it presupposes and whether it might somehow facilitate socio-cognitive, pragmatic or symbolic development \citep{Moll:2007gu,Hughes:2004zj,Brownell:2006gu}.  
 Phenomenologically we want to characterise what (if anything) is special about experiences of action and agency when shared agency is involved \citep{Pacherie:2010fk}.  
 Metaphysically we want to know what kinds of entities and structures are implied by the existence of shared agency \citep{Gilbert:1992rs,Searle:1994lb}.  
 And normatively we want to know what kinds of commitments (if any) are entailed by shared agency and how these commitments arise \citep{Roth:2004ki}.
 %, plus a formal account of how practical reasoning for joint action differs (if at all) from individual practical reasoning \citep{Sugden:2000mw,Gold:2007zd}
-One use for a philosophical account of shared agency is to support investigation of these questions by providing a principled way to distinguish shared from individual agency (as \citealp{Bratman:2009lv} suggests).  
-Or, if there is more than one form of shared agency, the account should provide a principled way of distinguishing among forms of individual and shared agency.   
-%
-%To make this aim vivid, consider some well-known contrast cases.
-%Contrast cases are pairs of episodes which are similar in terms of the behaviour and coordination they involve but where one episode exemplifies shared agency  while the other does not.  
-%Thus \citet{gilbert_walking_1990} contrasts two people walking together with two people individually walking side by side.  
-%The two pairs' movements may be the same and similarly coordinated (to avoid collision), but walking together involves shared agency whereas merely walking side by side does not. 
-%Relatedly,  \citet{Searle:1990em}  contrasts a case in which several park visitors simultaneously run to a central shelter in order to perform a dance with another case in which the park visitors run to the central shelter in order to escape a storm.  The first  case involves shared agency, the second does not; but the same movements occur in both.%
-%\footnote{
-%Compare \citet{Pears:1971fk} who uses contrast cases to argue that whether something is an ordinary, individual action depends on its antecedents.
-%}  
-%
-%Contrast cases invite the question, 
-%How do actions involving shared agency differ from merely parallel actions involving  only individual agency? 
-%Gilbert’s example shows that the difference can’t just be a matter of coordination, because people who are merely walking alongside each other also need to coordinate their actions in order to avoid colliding.  
-%And Searle’s example shows that the difference between shared agency and parallel individual agency can’t just be that the resulting actions have a common effect because merely parallel actions can have common effects too. 
-%Minimally, a philosophical account of shared agency should identify a difference in these and other contrast cases.
-%
+A philosophical account of shared agency 
+that made it possible to systematically distinguish shared from individual agency  
+may support investigation of these questions (as \citealp{Bratman:2009lv} suggests).  
+%Or, if there is more than one form of shared agency, the account should provide a principled way of distinguishing among forms of individual and shared agency.   
+
+
 
 As already mentioned, our aim is to show that distinguishing individual from shared agency sometimes involves appeal to certain structures of motor representation.
-First we outline a standard approach to shared agency. 
+Our first step is to review standard approaches to shared agency. 
 
 
 \section{Shared intention}
@@ -179,15 +189,15 @@ In short, shared intentions or their components are inferentially and normativel
 
 So much for shared intention.
 Can we give a full account of shared agency by saying (roughly) that exercises of shared agency involve agents acting on a shared intention?
-Or are further ingredients necessary to fully explicate shared agency?
+Or are further ingredients necessary in systematically distinguishing shared from individual  agency?
 Our view is that further ingredients are necessary.
 In giving a full account of shared agency, it is also necessary to appeal to certain structures of motor representation. 
 Note, however, that our view is consistent with various weaker claims linking shared intention to shared agency.
-Our view is consistent with the claim that appeal shared intention is also needed in giving an account of shared agency, 
-and with the claim that \emph{some forms} of shared agency can be fully characterised by appeal to shared intention alone.
-Our view is also consistent with the claim that all exercises of shared agency involve shared intentions in some way.%
+Our view is consistent with the claim that appeal shared intention is also needed in giving an account of shared agency,  
+%and with the claim that \emph{some forms} of shared agency can be fully characterised by appeal to shared intention alone.
+and with the claim that all exercises of shared agency involve shared intentions in some way.%
 \footnote{
-See \citet[p.\ 5]{Gilbert:2006wr}: `I take a collective action to involve a collective intention.'  
+On the latter claim, see \citet[p.\ 5]{Gilbert:2006wr}: `I take a collective action to involve a collective intention.'  
 Related claims are made by 
 	\citet[p.\ 381]{Carpenter:2009wq}, 
 	\citet[p.\ 369]{Call:2009fk}, 
@@ -196,24 +206,38 @@ Related claims are made by
 	\citet{Tollefsen:2005vh}.
 }
 
-Why might anyone hold, contrary to what we shall argue, that a full account of shared agency can be given without appeal to ingredients other than shared intention? 
-Two considerations might initially appear favour this view.
 
-First, if someone thought that it is possible to distinguish systematically between the contrast cases by appeal to shared intention (and perhaps only by appeal to shared intention), this could motivate holding that further ingredients are unnecessary in explicating shared agency.
-We shall argue, however, that distinguishing systematically between the contrast cases cannot be done entirely in terms of shared intention. 
-[*CV: this argument is missing from this draft.]
 
-{\label{text:second_consideration} A second, related consideration} which might appear to favour this view is a parallel between shared agency and ordinary, individual agency.
-If a full account of individual agency could be given by appeal to intention and other propositional attitudes with no appeal to motor representation,
-then it would seem unlikely that giving a full account of shared agency must somehow involve appeal to motor representation.
-However, as mentioned above, some have argued that fully characterising individual agency requires appeal to motor representation as well as intention \citep{pacherie:2000_content,butterfill:2012_intention}. 
-If these arguments are correct, the parallel between individual and shared agency motivates considering the possibility that  there is a constitutive role for motor representation in shared agency. 
-We also note that some philosophers allow that there could be agents whose actions are purposive---and, in some cases, even intentional---although  the agents have no intentions at all.
+\section{An objection}
+At this point opponents sometimes attempt to dismiss our view out of hand along these lines.
+Philosophers are interested in shared \emph{intentional} agency. 
+If there are forms of shared agency other than this one, we might be right to claim that understanding these will require appeal to motor representation.
+But---so the objection---such forms of shared agency (if they exist at all) are not of interest to philosophers. 
+So we are clearly wrong to claim that the philosophical project of distinguishing shared from individual agency might require appeal to ingredients other than shared intentions.
+
+One possible response to this line of opposition would be to weaken our claim. 
+We could become neutral on whether a full account of the sort of shared agency philosophers have focussed on can be given without appeal to motor representation,
+but insist that there is a form of shared agency about which parallel philosophical questions arise. 
+This conciliatory response would preserve most of the key claims in what follows, but a stronger response is available. 
+
+As mentioned above, some have argued that fully characterising individual agency requires appeal to motor representation as well as intention \citep{pacherie:2000_content,butterfill:2012_intention}. 
+These arguments concern intentional action.
+So if (as we suppose) these arguments are not known to be defective,
+then, assuming a parallel between individual and shared agency,  
+it should not be assumed at the outset that appealing to motor representation in a philosophical account of shared agency implies that the account does not apply to what opponents call `shared intentional agency'.
+We do not state our position in exactly the terms used by our opponent because of doubts about the qualifier `intentional' that are not specific to discussions of shared agency.\footnotemark \  \ 
+However, we do aim show in what follows that a philosophical account of the sort of shared agency that philosophers have been interested in will require appeal to structures of motor representation.
+
+\footnotetext{ 
+We avoid using the qualifier `intentional' for reasons not specific to questions about shared agency. 
+(We do use the term `shared intentional activity', but our use merely follows Bratman's stipulation that this term applies to an activity appropriately related to a shared intention.)
+Briefly, some philosophers offer reasons for holding that there could be agents whose actions are intentional although  the agents have no intentions at all.
 For instance, Bratman describes a creature who `acts on the basis of its beliefs and considered desires' only (not intentions) as doing things `intentionally' (\citeyear[p.\ 251]{bratman:2000_valuing}; see \citealp[pp.\ 137--8]{Bratman:1987xw} for further justification). 
-So there are several grounds for doubting that a full account of ordinary, individual agency could be given just in terms of intention. 
-If, as we believe, these doubts are well founded, then it is reasonable to ask whether ingredients other than shared intention are need to give a full account of shared agency.
-Our answer involves several steps. 
-The first is to describe the structure of motor representation of interest. 
+These and related considerations reveal a coherent and natural way of using the term `intentional' on which it would apply to actions in virtue of their being appropriately related to motor representations of outcomes to which they are directed. 
+It is not obvious to us whether using the term in this way is incorrect.
+}
+
+
 
 
 
@@ -355,9 +379,10 @@ How could social motor representation play a role in coordinating action when tw
 
 As a first step towards answering  this question let us illustrate a general principle about planning by scaling up from motor action all the way to corporate action.
 
-In small, socialist city, Aravinda organises the trams and Gerhard the busses.
-Let us stipulate that the extent to which the two services, tram and bus, are coordinated is to be measured by the sum of all passengers' total journey times.
-So new timetables would result in better coordination than the current timetables just if they would decrease the sum of passengers' total journey times.
+In small city state, Aravinda organises the trams and Gerhard the busses.
+Each is responsible for devising and updating the timetable for the service.
+Let us stipulate that the extent to which the tram and bus services are coordinated is to be measured by the sum of all passengers' total journey times.
+So a change to the timetables would result in better coordination  just if it would decrease the sum of passengers' total journey times.
 To illustrate, improving coordination might involve having trams arrive at a stop shortly before, rather than shortly after, busses depart from there.
 Now Aravinda and Gerhard each intend they, Aravinda and Gerhard, coordinate the trams with the busses  to the greatest extent possible given other constraints; and they intend to do this by way of these intentions and meshing subplans of them, and this is common knowledge between them. 
 Aravinda and Gerhard thus meet Bratman's sufficient conditions for them to have a shared intention.
@@ -371,10 +396,14 @@ But from each individual's point of view, the other's plans are  merely a constr
 This approach to planning suffers from two defects.
 First, it is unlikely to be optimal in the sense of resulting, eventually, in a combination of plans such that no other combination of plans would have been better for at least one service and no worse for either service.
 Second, it is unlikely to be efficient in the sense of allowing Gerhard and Aravinda to arrive at an optimal combination of plans for the two services, trams and buses, with the fewest iterations.%
-\footnote{
-The limits of this type of coordination, where each agent tries to predict the actions of the other, is nicely shown by the `two-way interaction' of an experiment by \citet{konvalinka:2010_follow}.
-When subjects were required to synchronise the timing of finger taps with each other, they ended up with a pattern of errors `oscillating in opposite directions'.
-}
+% --- I removed this footnote because the case is a bit different
+% --- In Konvalinka, the subjects have to act simultaneously so they can't wait to see what the other does
+%\footnote{
+%The limits of this type of coordination, where each agent tries to predict the actions of the other, is nicely illustrated by the `two-way interaction' condition of an experiment by \citet{konvalinka:2010_follow}.
+%When subjects were required to synchronise the timing of finger taps with each other in this condition, 
+%%each had to predict the others' action and modify their own accordingly. 
+%they ended up with a pattern of errors `oscillating in opposite directions' as each attempted to move towards the other (p.\ 2228).
+%}
 
 How could they do better?
 One possibility may be to have a single person planning the busses and trams---perhaps, for example, Aravinda could buy Gerhard's franchise. 
